# simple-inventary-management

./: .env  .gitignore  Cargo.toml  banco.sqlite3  build.rs  database.sqlite3  devbox.json  dhat-heap.json  teste_crud.sqlite3
src/: counter.rs  database.rs  ferris.rs  lib.rs  main.rs
src/database/: model.rs  query.rs
src/screens/: brands.rs
src/ui/: brand.rs  counter.rs  cpu.rs  department.rs  departments.rs  equipament.rs  equipament_model.rs  equipament_models.rs  gpu.rs  grid.rs  list_users.rs  mod.rs  role.rs  user.rs
src/ui/list_equipament_models/: detail.rs  mod.rs
src/ui/list_equipaments/: create.rs  detail.rs  list.rs  mod.rs
src/ui/list_users/: create.rs  detail.rs  list.rs  mod.rs
src/ui_old_slint/: brand.rs  department.rs  equipament.rs  equipament_model.rs  mod.rs
ui/: gallery_settings.slint  main.slint  menu.slint  side_bar.slint
ui/globals/: brand.slint  computer.slint  cpu.slint  department.slint  equipament_model.slint  globals.slint  gpu.slint  phone_number.slint  role.slint  users.slint
ui/pages/: about_page.slint  brand.slint  change_user_equipament.slint  cpu.slint  department.slint  equipament_model.slint  gpu.slint  list_computers.slint  list_equipament.slint  list_users.slint  page.slint  pages.slint  phone_number.slint  role.slint  user.slint
