[package]
name = "simple_inventary"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.37"
directories = "5.0.1"
libcosmic = {git="https://github.com/joshuamegnauth54/libcosmic.git",branch="fix-855-windows-build",default-features=false, features = ["winit"]}
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio"]}
tokio = { version = "1.36.0", features = ["rt-multi-thread", "rt", "macros"] }


[profile.release]
strip=true
opt-level="z"
lto=true

[profile.dev.build-override]
opt-level = 2
